[gd_scene load_steps=7 format=3 uid="uid://bxhms6q1tfgmg"]

[ext_resource type="Script" path="res://src/UI/MainMenu/TutorialPopup.gd" id="1"]
[ext_resource type="Script" path="res://src/UI/MainMenu/MainMenu.gd" id="3"]
[ext_resource type="PackedScene" path="res://src/UI/MainMenu/GameModeSelection.tscn" id="4"]
[ext_resource type="PackedScene" path="res://src/UI/BackgroundLayer.tscn" id="6"]
[ext_resource type="PackedScene" path="res://src/UI/Settings/Components/SettingsBtn.tscn" id="7"]

[sub_resource type="FontFile" id="1"]
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 40.0
offset_right = -80.0
offset_bottom = -40.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="Label" parent="VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = "wordimo"
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 35
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
text = "START"

[node name="Tutorial" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
text = "HOW TO PLAY"

[node name="Settings" parent="VBoxContainer/VBoxContainer" instance=ExtResource("7")]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_vertical = 1

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 6
text = "Quit"

[node name="TutorialPopup" type="AcceptDialog" parent="."]
dialog_text = "Use blocks to write as many words as you can!

{controls_tutorial}

Writing a valid word will clear up tiles in your board.
The game is over when your board is full, or when your
block queue is full."
script = ExtResource("1")

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("GameModeSelection"), [ExtResource("4")]]

[node name="BackgroundLayer" parent="." instance=ExtResource("6")]

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
